--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -26,8 +26,8 @@ spring:
     
 # Email Settings
   mail:
-    username: obsidi.academy@gmail.com
-    password: emiyerxmzsipfnpl
+    username:  
+    password:  
     host: smtp.gmail.com
     port: 587
     protocol: smtp
@@ -67,7 +67,7 @@ spring:
        
 # Database Settings
   datasource:
-    url: jdbc:postgresql://localhost:5432/feedAppModal
+    url: jdbc:postgresql://localhost:5432/FeedApplication
     username: postgres
     password: pg123
     hikari:
@@ -89,7 +89,7 @@ spring:
   
 # Database Settings 
   datasource:
-    url: jdbc:postgresql://localhost:5432/feedAppModal
+    url: jdbc:postgresql://localhost:5432/FeedApplication
     username: postgres
     password: pg123
     hikari:
